Fix contrast: blockquotes, prev/next, new comments.
Style changes in three contexts, especially for contrast/visibility:
  - Highlighting for new comments is now _much_ lighter.
  - Blockquotes display similarly to reddit-style: slightly muted
    text with a grey bar to the left but no background otherwise.
  - Prev/Next pagination for listings now readable and distinct.

Only applied to TheMotte.css, since it seems the one with complaints.

--- a/files/assets/css/TheMotte.css
+++ b/files/assets/css/TheMotte.css
@@ -121,6 +121,13 @@ a  { color: var(--primary); }
 	border-color: transparent !important;
 }
 
+.page-item .page-link {
+	background-color: var(--light);
+}
+.page-item.disabled .page-link {
+	color: var(--white);
+}
+
 .btn-lg {
 	border-color: transparent !important;
 }
@@ -134,8 +141,11 @@ pre {
 }
 
 blockquote {
-	color: var(--gray-400);
+	border-left: 2px solid var(--primary-muted);
+	color: var(--dark);
+	background-color: unset;
 }
+
 #account-menu {
 	left: -6px;
 }
@@ -163,7 +173,7 @@ div.deleted.banned {
 	padding: 10px;
 }
 .comment-anchor:target, .unread {
-	background: #00000055 !important;
+	background: #2280B310 !important;
 }
 #frontpage .posts .card, #userpage .posts .card, #search .posts .card {
 	border: none;
